# voa-teste-backend-02

./: .env.example  .gitignore  Dockerfile  Dockerfile.mock  README.md  demo.ipynb  demo.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: charges.py
app/client/: exceptions.py  payment_client.py  schemas.py
mock_server/: server.py
tests/: conftest.py  test_client.py  test_endpoint.py  test_retry.py  test_timeout.py
